projects/vb6parse/snapshots/tests/statements/objects/with_block/with_statement_with_if.snap
---
source: projects/vb6parse/tests/statements/objects/with_block.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: WithStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: WithKeyword
                  text: With
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: myObject
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: IfStatement
                      children:
                        - kind: Whitespace
                          text: "        "
                        - kind: IfKeyword
                          text: If
                        - kind: Whitespace
                          text: " "
                        - kind: BinaryExpression
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: PeriodOperator
                                  text: "."
                                - kind: Identifier
                                  text: Property
                            - kind: Whitespace
                              text: " "
                            - kind: GreaterThanOperator
                              text: ">"
                            - kind: Whitespace
                              text: " "
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "0"
                        - kind: Whitespace
                          text: " "
                        - kind: ThenKeyword
                          text: Then
                        - kind: Newline
                          text: "\n"
                        - kind: StatementList
                          children:
                            - kind: Whitespace
                              text: "            "
                            - kind: CallStatement
                              children:
                                - kind: PeriodOperator
                                  text: "."
                                - kind: Identifier
                                  text: Method
                                - kind: Newline
                                  text: "\n"
                            - kind: Whitespace
                              text: "        "
                        - kind: EndKeyword
                          text: End
                        - kind: Whitespace
                          text: " "
                        - kind: IfKeyword
                          text: If
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: WithKeyword
                  text: With
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
